# phishing-patterns

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: datamodels.py  logger.py  mlflow_helper.py  paths.py  settings.py  utils.py  visualization.py
src/configs/: email_patterns_manual_labels.yaml  evaluator_config.yaml  features.yaml  hnsw_clustering.yaml  hp_config.yaml  lang_config.yaml  llm_general_config.yaml  llm_labeling_config.yaml  llm_synth_ds_config.yaml  model_config.yaml  onnx_config.yaml
src/hnsw_clustering/: clustering_handler.py  hnsw_clustering.py  hnsw_index.py
src/inference_validate/: .env_example  README.md  config.py  constants.py  inference_run.py  pipelines.py  requirements.txt  settings.py
src/inference_validate/data_example/inference_emls/: 1751387580_4412.eml  1755802200_48.eml  1755802200_67.eml
src/inference_validate/data_example/mlflow_models/ae0977e07a2f4f1d831ab2a66a09dfcc/: inference_output.json
src/labeling/: data_labeling.py  process_labeled_data.py
src/model/: balancer.py  data_handler.py  evaluator.py  heads.py  hp_optimizer.py  manual_data_handler.py  metrics.py  splitter.py  thresholds_opt.py  train.py  trainer.py
src/prepare_data/: archive_extractor.py  data_processing.py  detect_lang.py  eml_parsing.py  get_embeddings.py  get_sentences.py  s3_downloader.py
src/setfit_onnx/: export_onnx_pipeline.py  onnx_utils.py  tokenizer_utils.py
src/templates/: main_prompt.j2  synthetic_ds_prompt.j2
